Extracted Class code to Class.js Added bind and Observer.

--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <script type="text/javascript" src="inherit.js"></script>
+    <script type="text/javascript" src="bind.js"></script>
+    <script type="text/javascript" src="Class.js"></script>
+    <script type="text/javascript" src="Observer.js"></script>
     <script type="text/javascript" src="test.js"></script>
 <body onload="main()">
     <div id="out" />
